Environments/TrainingRHEL/azuredeploy.json
{
  "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "adminusername": {
      "type": "String",
      "metadata": {
        "description": "VMs Admin username"
      }
    },
    "adminpassword": {
      "type": "String",
      "metadata": {
        "description": "VMs Admin password"
      }
    },
    "virtualMachineSize": {
      "defaultValue": "Standard_B4ms",
      "allowedValues": [
        "Standard_B4ms",
        "Standard_F4s",
        "Standard_A2_v2"
      ],
      "type": "String",
      "metadata": {
        "description": "VM tier"
      }
    },
    "location": {
      "type": "string",
      "defaultValue": "northeurope",
      "allowedValues": [
        "northeurope",
        "westeurope",
        "eastus",
        "japaneast",
        "eastasia",
        "westus",
        "francecentral",
        "ukwest"

      ]
    }
  },
  "variables": {
    "location": "[parameters('location')]",
    "vm-prefix": "[toLower(uniqueString(resourceGroup().id))]",
    "dnsSuffix": "[concat('az',toLower(uniqueString(resourceGroup().id)))]",
    "vmName": "[variables('vm-prefix')]",
    "osDiskType": "StandardSSD_LRS",
    "publicIpAddressName": "[concat(variables('vmName'), '-pip')]",
    "networkInterfaceName": "[concat(variables('vmName'),'-nic')]",
    "virtualNetworkName": "dsf-project-test-vnet",
    "addressPrefix": "10.0.0.0/16",
    "subnetPrefix": "10.0.0.0/24",
    "subnetName": "[concat(variables('virtualNetworkName'), '-subnet')]",
    "networkSecurityGroupName": "default-NSG",
    "subnetRef": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('subnetName'))]",
    "appInstallerScriptName": "appInstaller.ps1",
    "appInstallerScriptURI": "https://raw.githubusercontent.com/hteo1337/scripts/master/Setup/appInstaller.ps1",
    "elkNumberOfInstances": 3,
    "elkRHELVMNamePrefix": "[concat('elkrh-vm-',parameters('adminusername'))]",
    "elkRHELNicNamePrefix": "[concat('xnic-',parameters('adminusername'), substring(uniqueString(resourceGroup().name),1,4))]",
    "haaImagePublisher": "RedHat",
    "haaImageOffer": "RHEL",
    "haaImageSKU": "7.4"
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2019-08-01",
      "name": "[variables('networkSecurityGroupName')]",
      "location": "[variables('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "RDP",
            "properties": {
              "priority": 300,
              "protocol": "TCP",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "3389"
            }
          },
          {
            "name": "SQL",
            "properties": {
              "priority": 301,
              "protocol": "TCP",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "1443"
            }
          },
          {
            "name": "SSH",
            "properties": {
              "priority": 302,
              "protocol": "TCP",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "22"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2018-11-01",
      "name": "[variables('virtualNetworkName')]",
      "location": "[variables('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('addressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('subnetName')]",
            "properties": {
              "addressPrefix": "[variables('subnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
              }
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2018-11-01",
      "name": "[variables('networkInterfaceName')]",
      "location": "[variables('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses/', variables('publicIpAddressName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": "[variables('subnetRef')]"
              },
              "privateIPAllocationMethod": "Dynamic",
              "publicIpAddress": {
                "id": "[resourceId('Microsoft.Network/publicIpAddresses', variables('publicIpAddressName'))]"
              }
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/publicIpAddresses",
      "apiVersion": "2018-11-01",
      "location": "[variables('location')]",
      "name": "[variables('publicIpAddressName')]",
      "properties": {
        "publicIPAllocationMethod": "Dynamic",
        "dnsSettings": {
          "domainNameLabel": "[variables('dnsSuffix')]"
        }
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "name": "[variables('vmName')]",
      "apiVersion": "2018-10-01",
      "location": "[variables('location')]",
      "tags": {
                "AlwaysPoweredOn": "True",
                "JITExemption": "Yes",
                "Project": "DSF-Project"
            },
      "properties": {
        "hardwareProfile": {
          "vmSize": "[parameters('virtualMachineSize')]"
        },
        "storageProfile": {
          "osDisk": {
            "createOption": "fromImage",
            "managedDisk": {
              "storageAccountType": "[variables('osDiskType')]"
            }
          },
          "imageReference": {
            "publisher": "MicrosoftWindowsServer",
            "offer": "WindowsServer",
            "sku": "2016-Datacenter",
            "version": "latest"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaceName'))]"
            }
          ]
        },
        "osProfile": {
          "computerName": "[variables('vmName')]",
          "adminusername": "[parameters('adminusername')]",
          "adminpassword": "[parameters('adminpassword')]",
          "windowsConfiguration": {
            "enableAutomaticUpdates": true,
            "provisionVmAgent": true
          }
        }
      },
      "dependsOn": [
        "[concat('Microsoft.Network/networkInterfaces/', variables('networkInterfaceName'))]"
      ]
    },
    {
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "name": "[concat(variables('vmName'),'/CustomScriptExtension')]",
      "apiVersion": "2015-06-15",
      "location": "[variables('location')]",
      "properties": {
        "publisher": "Microsoft.Compute",
        "type": "CustomScriptExtension",
        "typeHandlerVersion": "1.7",
        "autoUpgradeMinorVersion": true,
        "settings": {
          "fileUris": [
            "[variables('appInstallerScriptURI')]"
          ]
        },
        "protectedSettings": {
          "commandToExecute": "[concat ('powershell -ExecutionPolicy Unrestricted -File ',' ', variables('appInstallerScriptName'))]"
        }
      },
      "dependsOn": [
        "[concat('Microsoft.Compute/virtualMachines/', variables('vmName'))]"
      ]
    },
    {
      "apiVersion": "2020-04-01",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[concat(variables('elkRHELNicNamePrefix'),'-', copyindex())]",
      "location": "[variables('location')]",
      "copy": {
        "name": "nicLoop",
        "count": "[variables('elkNumberOfInstances')]"
      },
      "dependsOn": [
         "[resourceId('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[variables('subnetRef')]"
              }
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2019-07-01",
      "type": "Microsoft.Compute/virtualMachines",
      "name": "[concat(variables('elkRHELVMNamePrefix'),'-', copyindex())]",
      "tags": {
                "AlwaysPoweredOn": "True",
                "JITExemption": "Yes",
                "Project": "DSF-Project"
            },
      "copy": {
        "name": "virtualMachineLoop",
        "count": "[variables('elkNumberOfInstances')]"
      },
      "location": "[variables('location')]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkInterfaces/', variables('elkRHELNicNamePrefix'),'-', copyindex())]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[parameters('virtualMachineSize')]"
        },
        "osProfile": {
          "computerName": "[concat('elkrh-vm','-', copyIndex())]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "[variables('haaImagePublisher')]",
            "offer": "[variables('haaImageOffer')]",
            "sku": "[variables('haaImageSKU')]",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces',concat(variables('elkRHELNicNamePrefix'),'-',copyindex()))]"
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": false
          }
        }
      }
    }
  ],
  "outputs": {
    "adminusername": {
      "type": "String",
      "value": "[parameters('adminusername')]"
    },
    "adminpassword": {
      "type": "String",
      "value": "[parameters('adminpassword')]"
    },
    "vmDNS": {
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses',variables('publicIpAddressName'))).dnsSettings.fqdn]",
      "type": "string"
    },
    "RHELprivateIP": {
      "type": "string",
      "value": "[concat(reference(resourceId('Microsoft.Network/networkInterfaces/', concat(variables('elkRHELNicNamePrefix'),'-0'))).ipConfigurations[0].properties.privateIPAddress,' ; ',reference(resourceId('Microsoft.Network/networkInterfaces/', concat(variables('elkRHELNicNamePrefix'),'-1'))).ipConfigurations[0].properties.privateIPAddress,' ; ',reference(resourceId('Microsoft.Network/networkInterfaces/', concat(variables('elkRHELNicNamePrefix'),'-2'))).ipConfigurations[0].properties.private [...]
    }
  }
}
